# HunyuanImage-3.0

./: Hunyuan-Image3.md  README.md  README_zh_CN.md  my_make_pic.py  pyproject.toml  requirements.txt  run_demo_instruct.sh  run_demo_instruct_distil.sh  run_image_gen.py  setup.py
PE/: deepseek.py  system_prompt.py
docker/: hyimage3_vllm.Dockerfile
hunyuan_image_3/: __init__.py  autoencoder_kl_3d.py  cache_utils.py  hunyuan.py  hunyuan_image_3_pipeline.py  image_processor.py  modeling_hunyuan_image_3.py  siglip2.py  system_prompt.py  tokenization_hunyuan_image_3.py
utils/: import_utils.py
vllm_infer/: README.md  openai_client.py  run_vllm_server.sh
